# EvalForge

./: README.md  pyproject.toml  requirements.txt
config/: generator_config_a.yaml  generator_config_b.yaml  judge_config.yaml  judge_config_beta_family.yaml  judge_config_cross_family.yaml  judge_config_naive.yaml  judge_config_same_family.yaml  pricing.yaml  rubric.yaml  rubric_naive.yaml
logs/: bias_experiment_hardened_audit.jsonl  bias_experiment_naive_audit.jsonl  compare_audit.jsonl  pointwise_audit.jsonl  run_audit.jsonl  self_enhancement_beta_family_audit.jsonl  self_enhancement_cross_family_audit.jsonl  self_enhancement_same_family_audit.jsonl  validate_audit.jsonl
results/: bias_experiment_report.json  comparison_report.json  pointwise_report.json  self_enhancement_report.json  validation_report.json
src/judge_pipeline/: aggregate.py  audit_log.py  bias_metrics.py  cli.py  config.py  cost.py  judge.py  parsing.py  prompts.py  providers.py  rubric.py  schema.py  suites.py  validation.py
src/judge_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
suites/: adversarial_probes.yaml  comparison_suite.yaml  gold_labeled_suite.yaml  pointwise_suite.yaml  self_enhancement_suite.yaml
tests/: test_aggregate.py  test_bias_metrics.py  test_parsing.py  test_providers.py
